refactor(datasource): route catalog service through catalog gateway